<resources>
    <string name="app_name">Costa Rica Travel</string>
    <string name="nav_header_title">Costa Rica Travel</string>
    <string name="nav_header_subtitle">Discovering the \"Pura Vida\"</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_places">National Parks</string>
    <string name="menu_exchange_rate">Exchange Rate</string>
    <string name="menu_food">Traditional Food</string>
    <string name="currency_dolar">%1$.2f Dollar USD</string>
    <string name="currency_pound">%1$.2f Pound GBP</string>
    <string name="currency_mx">%1$.2f Mexican Peso MXN</string>
    <string name="currency_cop">%1$.2f Colombian Peso COP</string>
    <string name="currency_eur" translatable="false">%1$.2f Euro EUR</string>
    <string name="currency_cor">%1$.2f Nicaraguan Cordobas NIO</string>
    <string name="currency_pen">%1$.2f Peruvian Sol PEN</string>
    <string name="currency_gtq" translatable="false">%1$.2f Quetzal GTQ</string>
    <string name="currency_br">%1$.2f Brazilian Reais BRL</string>
    <string name="official_currency">Costa Rica official currency is called \"colon (CRC)\", here you can calculate how much are you going to pay using CRC as base:</string>
    <string name="crc_amount">CRC amount</string>
    <string name="crc_value" translatable="false">%1$.2f CRC</string>
    <string name="food_main_label">Costa Rica is a country with a lot of cultures so you can find world wide food, but this is a list of the most traditional food you must eat</string>
    <string name="food_1" translatable="false">Pinto</string>
    <string name="food_2">Meat Pot</string>
    <string name="food_3" translatable="false">Chifrijo</string>
    <string name="food_4" translatable="false">Tamales</string>
    <string name="food_1_description">Pinto is the most traditional dish for breakfast (but you can eat it for lunch or dinner as well) It is made of rice and beans mixed up, you can find this all over the country</string>
    <string name="food_2_description">Meat pot is the a traditional soup made with beef and many vegetables, usually found all over the country</string>
    <string name="food_3_description">Chifrijo is a traditional dish made of rice, beans, \"Pico de gallo\" (tomato chopped mixed with species) and pork, ocaccionaly served with avocado and chips</string>
    <string name="food_4_description">A tamale is a corn-based cooked masa that is steamed in either banana leaves. Inside of the masa are fillings that  generally include rice, meat, and vegetables.</string>
    <string name="spanish_pronunciation">Spanish Pronunciation</string>
    <string name="food_5">Rice Pudding</string>
    <string name="food_5_description">Rice pudding is a typical dessert made by slowly cooking rice with milk and sugar. It is served hot or cold and cinnamon, vanilla or lemon peel is usually sprinkled on top to flavor it.</string>
    <string name="food_6">Picadillo de Chayote</string>
    <string name="food_6_description">Picadillo de chayote is a very traditional Costa Rican recipe that combines the chayote fruit with traditional Costa Rican sofrito, spices, and cream. It is often served as a side dish to the Costa Rican casado, which is a main meal</string>
    <string name="food_7" translatable="false">Chorreadas</string>
    <string name="food_7_description">Chorreadas are basically Costa Rican corn pancakes. They can be sweet or savory, and are made from ground fresh corn. They have similar ingredients to a corn tortilla but the fresh corn and milk give them a completely different texture.</string>
    <string name="food_8" translatable="false">Empanadas</string>
    <string name="food_8_description">Empanadas are a very popular food in Costa Rica, both because they are easy to make at home, but also because you can buy empanadas on the street in practically every location imaginable.  Bean and cheese empanadas (empanada de frijol con queso) are a popular vegetarian type of empanada. Most other empanadas just have a single filling, but the bean and cheese are a fun take on the traditional filling.</string>
    <string name="food_9" translatable="false">Casado</string>
    <string name="food_9_description">The casado is the most traditional Costa Rican lunch- made up of rice, (black) beans, protein, vegetables- all on one plate.  Since lunch is the main meal of the day in Costa Rica, the casado is the highlight of Costa Rican cuisine.</string>
    <string name="error_exchange_rate">Costa Rica Central Bank Service for Exchange Rate unavailable now, please try again later</string>
    <string name="food_10">Vigoron</string>
    <string name="food_10_description">The Costa Rican vigorón is made from chicharrones (fried pork rinds or pork belly), a cabbage and chimichurri salad and with boiled yuca (cassava) and boiled green plantains in the mix, this dish is usually served cold.</string>
    <string name="food_11">Rice and Beans</string>
    <string name="food_11_description">rice and beans is a completely different recipe, as it combines red beans with rice cooked in coconut milk, and spiced with a bit of habanero pepper. The dish is said in English. Over time boiled chicken thighs were added as a side dish, and the result is beyond delicious.</string>
    <string name="food_12">Rice with Chicken</string>
    <string name="food_12_description">Rice with Chicken is one of the most popular and traditional Costa Rican dishes, It is the official dish in any social event for example at birthday parties. Maybe because it is so simple to make and you can make it in advance so it is conveniently ready when your guest arrive.</string>
    <string name="food_13">Sweet water</string>
    <string name="food_13_description">This hot drink combines tapa de dulce (Costa Rican brown sugar) and boiling water/milk for a delightful treat.</string>
    <string name="food_14" translatable="false">Ceviche</string>
    <string name="food_14_description">This Costa Rican ceviche recipe combines fresh white fish marinated in lime, red bell pepper, cilantro, and onion. It’s a favorite worldwide- and the Costa Rican version is to die for.</string>
    <string name="food_15" translatable="false">Churchil</string>
    <string name="food_15_description">Churchill is a dessert made up of ice, syrup, condensed milk, powder milk, ice cream and fruits,</string>
    <string name="home_1">TimeZone</string>
    <string name="home_1_description">UTC-6</string>
    <string name="home_2">Electrical Plugs</string>
    <string name="home_2_description">110V Type A &amp; B Socket</string>
    <string name="home_3">Currency</string>
    <string name="home_3_description">Colon</string>
    <string name="home_4">Language</string>
    <string name="home_4_description">Spanish</string>
    <string name="time_actual">Actual Time</string>
    <string name="home_slider_1">Whale Bay</string>
    <string name="home_slider_2">Arenal Volcano</string>
    <string name="home_slider_3">Celeste River</string>
    <string name="home_slider_4" translatable="false">La Fortuna</string>
    <string name="home_slider_5">Cocos Island</string>
    <string name="home_slider_6">Ruins of Cartago</string>
    <string name="home_slider_7">Sabana Park</string>
    <string name="home_slider_8">Children Museum</string>
    <string name="home_slider_9">Zarcero Park</string>
    <string name="home_slider_10">Duran Sanatorium</string>
    <string name="home_currency_disclaimer">Must of the places in Costa Rica takes Credit Cards (specially Visa or MasterCard), cash could be used on public transportations, souvenirs or buying street food. Some places might accept dollars cash on a lower exchange rate, so avoid overpay and try to get money at any local bank or at one ATM</string>
    <string name="number_validation">Number too long, please use a lower value</string>
    <string name="country_flag">Country Flag</string>
    <string name="home_language_disclaimer">The official national language of Costa Rica is Spanish, however English language, as well as the Portuguese, and many other languages, also are being spoken by a percentage of the population.</string>
    <string name="timezone_icon">timezone icon</string>
    <string name="food_16">Budin</string>
    <string name="food_16_description">This is a kind of bread made out of old and dry baguette, milk, butter and sugar, some people add raisins to it, usually served with condensed milk</string>
    <string name="price_estimation">"Price estimation: "</string>
    <string name="tip">Tip</string>
    <string name="tip_value" translatable="false">10%</string>
    <string name="home_tip_disclaimer">Tipping is mandatory at restaurants, 10% tip fee will be charged on your restaurant bill, so you dont need to add any extra amount, but it is up to you. There could be several people that might ask you for a tip for a service (please keep in mind that the minimum monthly wage in Costa Rica is around CRC 360000 if you still want to tip, you can use this as reference) but again it is not mandatory</string>
    <string name="gas_station">Gas Stations</string>
    <string name="gas_station_value">" Assisted-Service"</string>
    <string name="gas_type_1" translatable="false">Super</string>
    <string name="gas_type_2" translatable="false">Regular</string>
    <string name="gas_type_3" translatable="false">Diesel</string>
    <string name="gas_price">₡%1d per liter</string>
    <string name="currency_yuan" translatable="false">%1$.2f Yuan CNY</string>
    <string name="currency_india">%1$.2f Indian Rupee INR</string>
    <string name="currency_south_korea">%1$.2f South Korean Won KRW</string>
    <string name="currency_argentina">%1$.2f Argentinan Peso ARS</string>
    <string name="currency_denmark">%1$.2f Danish Krone DKK</string>
    <string name="currency_thailand">%1$.2f Thailand Bath THB</string>
    <string name="home_gas_station_disclaimer">" As soon as you get to the gas station, you need to wait for a person to help you out to fill up the tank, cash and credit cards are accepted all over the country, Also you will find a lot of Charging Stations for electric cars, and there are 3 different types of gasoline you can get in Costa Rica:"</string>
    <string name="help_menu">Help</string>
    <string name="ok" translatable="false">OK</string>
    <string name="info_modal_food">We highly recommend to visit a \"Soda\" (a small local restaurant) to buy some local dishes at Costa Rica, you will get the best prices on those small restaurants. Prices listed here are an estimated based on how much a costa rican is willing to pay.</string>
    <string name="remove_ads">Remove Ads!</string>
    <string name="remove_ads_description">Get the premium version to enjoy an ad-free experience.</string>
    <string name="remove_ads_btn">Download Premium Version</string>
    <string name="currency_icon">currency icon</string>
    <string name="tip_icon">tip icon</string>
    <string name="language_icon">Language Icon</string>
    <string name="menu_bus">Bus Routes</string>
    <string name="downloadIcon">Download Park Info</string>
    <string name="locationIcon">Open park location</string>
    <string name="onlineIcon">Open Online Purchase</string>
    <string name="home_taxi_disclaimer">Official red cabs fare starts at 920 CRC first KM then 920 CRC per KM, this is usually the expensive way to move around the country (specially at the airport), there are 2 private transport apps available on the country, Uber and Didi. These are not legal here, but it is the most used shuttle and way more inexpensive that red cabs. You could also ask for a private shuttle but please double check with Uber to make sure you are getting a good price or you could get scammed</string>
    <string name="download_uber"><u>Download Uber</u></string>
    <string name="download_didi"><u>Download Didi</u></string>
</resources>