<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <!--
        <item
            android:id="@+id/nav_places"
            android:icon="@drawable/ic_places"
            android:title="@string/menu_places" />
            -->
        <item
            android:id="@+id/nav_bus"
            android:icon="@drawable/ic_bus"
            android:title="@string/menu_bus" />
        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/ic_menu_food"
            android:title="@string/menu_food" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_currency_icon"
            android:title="@string/menu_exchange_rate" />
    </group>
</menu>