<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_upgrade_bg"
    android:padding="16dp">

    <ImageView
        android:id="@+id/modalImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_ads_free"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/modalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_ads"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_below="@id/modalImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/modalDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_ads_description"
        android:textColor="@color/white"
        android:layout_below="@id/modalTitle"
        android:textAlignment="center"
        android:justificationMode="inter_word"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnUpgrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_ads_btn"
        android:textColor="@android:color/white"
        android:background="@drawable/btn_upgrade_bg"
        android:layout_below="@id/modalDescription"
        android:layout_centerHorizontal="true"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="16dp" />

</RelativeLayout>