<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_food">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.costaricatravel.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.costaricatravel.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_food"
        android:name="com.example.costaricatravel.ui.food.FoodFragment"
        android:label="@string/menu_food"
        tools:layout="@layout/fragment_food" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.costaricatravel.ui.ExchangeRate.ExchangeRateFragment"
        android:label="@string/menu_exchange_rate"
        tools:layout="@layout/fragment_exchange_rate" />
</navigation>