<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:id="@+id/gasModalDisclaimer"
        android:paddingTop="6dp"
        android:paddingBottom="30dp"
        android:paddingHorizontal="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
        android:layout_centerHorizontal="true"
        android:justificationMode="inter_word"
        android:text="@string/home_gas_station_disclaimer"
        android:textColor="@color/nav_bar"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:paddingBottom="30dp"
        android:layout_below="@id/gasModalDisclaimer"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gas_type_1"
                android:layout_marginEnd="5dp"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:textStyle="bold"
                android:textColor="@color/nav_bar"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:textColor="@color/nav_bar"
                android:id="@+id/gas1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gas_type_2"
                android:layout_marginEnd="5dp"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:textStyle="bold"
                android:textColor="@color/nav_bar"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:textColor="@color/nav_bar"
                android:id="@+id/gas2"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gas_type_3"
                android:layout_marginEnd="5dp"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:textStyle="bold"
                android:textColor="@color/nav_bar"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:textColor="@color/nav_bar"
                android:id="@+id/gas3"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>