<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/PlacesName"
        style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
        android:layout_alignParentTop="true"
        android:textColor="@color/nav_bar"/>
    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/PlacesPrices"
        android:layout_below="@+id/PlacesName"
        app:flexWrap="wrap"
        app:alignContent="center"
        app:justifyContent="space_between">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/PlacePriceText"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
            app:drawableStartCompat="@drawable/ic_dollar"
            android:textColor="@color/nav_bar"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/downloadInfo"
            android:contentDescription="@string/downloadIcon"
            android:src="@drawable/ic_download"/>

    </com.google.android.flexbox.FlexboxLayout>


    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/PlacesPrices"
        android:id="@+id/placesInfo"
        app:flexWrap="wrap"
        app:alignContent="center"
        app:justifyContent="space_between">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
            android:textColor="@color/nav_bar"
            android:id="@+id/PlaceSchedule"
            android:minWidth="200dp"
            app:drawableStartCompat="@drawable/ic_clock"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/openLocation"
            android:contentDescription="@string/locationIcon"
            android:src="@drawable/ic_location"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/onlineIcon"
            android:id="@+id/onlineReservation"
            android:src="@drawable/ic_online_payment"/>
    </com.google.android.flexbox.FlexboxLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/nav_bar"
        android:layout_below="@+id/placesInfo"/>

</RelativeLayout>